feat: add agent.name as dimension

--- a/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
@@ -2,6 +2,7 @@
   name: agent.ephemeral_id
 - external: ecs
   name: agent.name
+  dimension: true
 - external: ecs
   name: agent.version
   index: false
