ci: Allow system-tests check to be set as required
Follows GitHub's guidance on how to create a step with the same name as
the required action so that a status check may be set as required in a
protected branch.

Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,17 @@ on:
       - main
       - 7.1*
       - 8.*
-    paths-ignore:
+    paths-ignore: # When updating the list of expressions also update ci-docs.yml
       - '**.md'
       - '**.asciidoc'
+      - '**.png'
+      - '**.svg'
   pull_request:
-    paths-ignore:
+    paths-ignore: # When updating the list of expressions also update ci-docs.yml
       - '**.md'
       - '**.asciidoc'
+      - '**.png'
+      - '**.svg'
 
 # limit the access of the generated GITHUB_TOKEN
 permissions:
