Fix fields def and ingest pipelines for agg templates

--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/elasticsearch/ingest_pipeline/default.yml
@@ -7,3 +7,6 @@ processors:
       name: observer_ids
   - pipeline:
       name: ecs_version
+  - remove:
+      field: _metric_descriptions
+      ignore_missing: true
