--- a/apmpackage/apm/data_stream/transaction_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/fields/fields.yml
@@ -78,3 +78,6 @@
   dynamic: true
   description: |
     Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as scaled_float.
+- name: transaction.aggregation.overflow_count
+  type: long
+  description: Number of aggregation groups that overflowed for transaction metrics aggregation
