feat: add more dimensions

--- a/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
@@ -56,6 +56,7 @@
   name: cloud.region
 - external: ecs
   name: cloud.service.name
+  dimension: true
 - external: ecs
   name: container.id
 - external: ecs
