action: use the composite action

--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -1,20 +1,16 @@
----
 name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
+    workflows: [ci, ci-docs, system-test-reporter]
     types: [completed]
 
 jobs:
   otel-export-trace:
-    name: OpenTelemetry Export Trace
     runs-on: ubuntu-latest
     steps:
-      - name: Export Workflow Trace
-        uses: inception-health/otel-export-trace-action@v1
+      - uses: elastic/apm-pipeline-library/.github/actions/opentelemetry@current
         with:
-          otlpEndpoint: "${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}"
-          otlpHeaders: "${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}"
-          otelServiceName: ${{ github.repository }}
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          runId: ${{ github.event.workflow_run.id }}
+          vaultUrl: ${{ secrets.VAULT_ADDR }}
+          vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
+          vaultSecretId: ${{ secrets.VAULT_SECRET_ID }}
