--- a/apmpackage/apm/data_stream/service_summary_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/service_summary_interval_metrics/fields/fields.yml
@@ -15,3 +15,6 @@
   dynamic: true
   description: |
     Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as scaled_float.
+- name: service_summary.aggregation.overflow_count
+  type: long
+  description: Number of aggregation groups that overflowed for service summary metrics aggregation.
