--- a/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
@@ -33,32 +33,40 @@
   name: client.geo.region_name
 - external: ecs
   name: cloud.account.id
+  dimension: true
 - external: ecs
   name: cloud.account.name
+  dimension: true
 - external: ecs
   name: cloud.availability_zone
   index: false
+  dimension: true
 - external: ecs
   name: cloud.instance.id
 - external: ecs
   name: cloud.instance.name
 - external: ecs
   name: cloud.machine.type
+  dimension: true
 - external: ecs
   name: cloud.project.id
+  dimension: true
 - external: ecs
   name: cloud.project.name
+  dimension: true
 - external: ecs
   name: cloud.provider
   index: false
   dimension: true
 - external: ecs
   name: cloud.region
+  dimension: true
 - external: ecs
   name: cloud.service.name
   dimension: true
 - external: ecs
   name: container.id
+  dimension: true
 - external: ecs
   name: destination.address
 - external: ecs
@@ -69,17 +77,21 @@
   name: ecs.version
 - external: ecs
   name: event.outcome
+  dimension: true
 - external: ecs
   name: host.architecture
 - external: ecs
   name: host.hostname
+  dimension: true
 - external: ecs
   name: host.ip
 - external: ecs
   name: host.name
+  dimension: true
 - external: ecs
   name: host.os.platform
   index: false
+  dimension: true
 - external: ecs
   name: labels
   dynamic: true
@@ -107,6 +119,7 @@
   dimension: true
 - external: ecs
   name: service.node.name
+  dimension: true
 - external: ecs
   name: service.version
   dimension: true
