Add overflow bucket to service destination

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -36,6 +36,9 @@
     - description: Introduce `metrics-apm.service_summary-${interval}` data stream for service summary metrics (`1m`, `10m` and `60m`).
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10029
+    - description: Add service destination overflow metrics
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10069
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
