--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
@@ -16,6 +16,9 @@
 - name: service.target.type
   type: keyword
   description: Type of the target service for which data is collected
+- name: service_destination.aggregation.overflow_count
+  type: long
+  description: Number of aggregation groups that overflowed for service destination metrics aggregation.
 - name: span.name
   type: keyword
   description: Generic designation of a span in the scope of a transaction.
