Hide non-default rollup interval data stream

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -42,6 +42,9 @@
     - description: Add service summary overflow metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10061
+    - description: Set data streams with non-default rollup intervals as hidden
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10070
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
