--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/manifest.yml
@@ -16,3 +16,5 @@ elasticsearch:
       index:
         sort.field: "@timestamp"
         sort.order: desc
+    data_stream:
+      hidden: {{ .Hidden }}
