--- a/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
@@ -35,3 +35,5 @@ elasticsearch:
       index:
         sort.field: "@timestamp"
         sort.order: desc
+    data_stream:
+      hidden: {{ .Hidden }}
