Add overflow bucket to service summary (#10061)

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -39,6 +39,9 @@
     - description: Add service destination overflow metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10069
+    - description: Add service summary overflow metrics
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10061
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
