apmpackage: add event categorization fields

--- a/apmpackage/apm/data_stream/app_logs/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/app_logs/fields/ecs.yml
@@ -83,6 +83,12 @@
 - external: ecs
   name: event.action
 - external: ecs
+  name: event.type
+- external: ecs
+  name: event.category
+- external: ecs
+  name: event.kind
+- external: ecs
   name: host.architecture
 - external: ecs
   name: host.hostname
