--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -42,6 +42,9 @@
     - description: Add service summary overflow metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10061
+    - description: Add event categorization fields
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10066
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
