--- a/apmpackage/apm/data_stream/service_transaction_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/service_transaction_interval_metrics/fields/fields.yml
@@ -25,4 +25,4 @@
     Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as scaled_float.
 - name: service.aggregation.overflow_count
   type: long
-  description: Number of aggregation groups that overflowed for service metrics aggregation.
+  description: Number of aggregation groups that overflowed for service transaction metrics aggregation.
