--- a/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/service_transaction_interval_metrics/manifest.yml
@@ -1,7 +1,7 @@
-title: APM service metrics {{ .Interval }}
+title: APM service transaction metrics {{ .Interval }}
 type: metrics
-dataset: apm.service.{{ .Interval }}
-ilm_policy: metrics-apm.service_interval_metrics-default_policy.{{ .Interval }}
+dataset: apm.service_transaction.{{ .Interval }}
+ilm_policy: metrics-apm.service_transaction_interval_metrics-default_policy.{{ .Interval }}
 elasticsearch:
   index_template:
     mappings:
