Fix system test

--- a/systemtest/approvals/TestServiceTransactionMetricsAggregation.approved.json
+++ b/systemtest/approvals/TestServiceTransactionMetricsAggregation.approved.json
@@ -7,7 +7,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.10m",
+                "dataset": "apm.service_transaction.10m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -24,7 +24,7 @@
             },
             "metricset": {
                 "interval": "10m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
@@ -63,7 +63,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.1m",
+                "dataset": "apm.service_transaction.1m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -80,7 +80,7 @@
             },
             "metricset": {
                 "interval": "1m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
@@ -119,7 +119,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.60m",
+                "dataset": "apm.service_transaction.60m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -136,7 +136,7 @@
             },
             "metricset": {
                 "interval": "60m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
@@ -175,7 +175,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.10m",
+                "dataset": "apm.service_transaction.10m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -192,7 +192,7 @@
             },
             "metricset": {
                 "interval": "10m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
@@ -231,7 +231,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.1m",
+                "dataset": "apm.service_transaction.1m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -248,7 +248,7 @@
             },
             "metricset": {
                 "interval": "1m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
@@ -287,7 +287,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.service.60m",
+                "dataset": "apm.service_transaction.60m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -304,7 +304,7 @@
             },
             "metricset": {
                 "interval": "60m",
-                "name": "service"
+                "name": "service_transaction"
             },
             "observer": {
                 "hostname": "dynamic",
