--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -48,6 +48,9 @@
     - description: Set data streams with non-default rollup intervals as hidden
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10070
+    - description: Remove policy input var `service_metrics_enabled`
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10109
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
