Add service.language.name to service summary metrics

--- a/systemtest/approvals/TestServiceSummaryMetricsAggregation.approved.json
+++ b/systemtest/approvals/TestServiceSummaryMetricsAggregation.approved.json
@@ -31,6 +31,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest"
             }
         },
@@ -65,6 +68,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest"
             }
         },
@@ -99,6 +105,9 @@
                 "name": "metric"
             },
             "service": {
+                "language": {
+                    "name": "go"
+                },
                 "name": "systemtest"
             }
         }
