--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -54,6 +54,9 @@
     - description: Add `service.language.name` to service transaction metrics and service summary metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10111
+    - description: Remove policy input var `service_metrics_enabled`
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10109
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
