Added `error.type`, `event.type`, `event.kind` and `session.id` fields to the app-logs and error-logs data streams

--- a/apmpackage/apm/data_stream/app_logs/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/app_logs/fields/ecs.yml
@@ -75,6 +75,8 @@
 - external: ecs
   name: error.stack_trace
 - external: ecs
+  name: error.type
+- external: ecs
   name: event.dataset
 - external: ecs
   name: event.outcome
