--- a/.github/workflows/update-beats.yml
+++ b/.github/workflows/update-beats.yml
@@ -12,7 +12,7 @@ permissions:
   contents: write
 
 jobs:
-  updatecli:
+  bump:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
