--- a/.ci/update-beats.yml
+++ b/.ci/update-beats.yml
@@ -29,7 +29,7 @@ sources:
   beats:
     kind: json
     spec:
-      file: 'https://api.github.com/repos/elastic/beats/commits?sha=main&per_page=1'
+      file: 'https://api.github.com/repos/elastic/beats/commits?sha={{ requiredEnv "BRANCH_NAME" }}&per_page=1'
       key: '.[0].sha'
 
 conditions:
