--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,9 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: [ci, system-test-reporter]
+    workflows:
+      - ci
+      - system-test-reporter
     types: [completed]
 
 jobs:
