--- a/.github/workflows/bump-elastic-stack.yml
+++ b/.github/workflows/bump-elastic-stack.yml
@@ -5,12 +5,14 @@ on:
   schedule:
     - cron: '0 15 * * 1-5'
   pull_request:
+  push:
 
 permissions:
   pull-requests: write
   contents: write
 
 jobs:
+  ## TODO: provide composite action that provides the current active branches
   filter:
     runs-on: ubuntu-latest
     timeout-minutes: 1
@@ -20,11 +22,15 @@ jobs:
       - id: generator
         shell: python
         run: |
+          import json
           import os
           import requests
           r = requests.get(url='https://storage.googleapis.com/artifacts-api/snapshots/branches.json')
+          matrix = {'include': []}
+          for branch in r.json()['branches']:
+            matrix['include'].append({"branch": branch})
           with open(os.environ.get('GITHUB_OUTPUT'), "a") as f:
-            f.write("matrix={}\n".format(r.json()['branches']))
+            f.write("matrix={}\n".format(json.dumps(matrix)))
       - id: debug
         run: echo "The branches are ${{ fromJSON(steps.generator.outputs.matrix) }}"
 
@@ -32,8 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [filter]
     strategy:
-      matrix:
-        branch: ${{ fromJSON(needs.filter.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
     steps:
       - run: echo ${{ matrix.branch }}
-
