--- a/.github/workflows/bump-elastic-stack.yml
+++ b/.github/workflows/bump-elastic-stack.yml
@@ -2,10 +2,9 @@
 name: bump-elastic-stack-snapshot
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 15 * * 1-5'
-  pull_request:
-  push:
 
 permissions:
   pull-requests: write
@@ -34,10 +33,23 @@ jobs:
       - id: debug
         run: echo "The branches are ${{ fromJSON(steps.generator.outputs.matrix) }}"
 
-  branches:
+  bump-elastic-stack:
     runs-on: ubuntu-latest
     needs: [filter]
     strategy:
       matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
     steps:
-      - run: echo ${{ matrix.branch }}
+      - uses: actions/checkout@v3
+
+      - name: Setup Git
+        uses: elastic/apm-pipeline-library/.github/actions/setup-git@current
+
+      - name: Install Updatecli in the runner
+        uses: updatecli/updatecli-action@453502948b442d7b9a923de7b40cc7ce8628505c
+
+      - name: Run Updatecli
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          BRANCH: ${{ matrix.branch }}
+        run: updatecli apply --config ./.ci/bump-elastic-stack-snapshot.yml
+
