--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,11 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: [ci, system-test-reporter]
+    workflows:
+      - bump-elastic-stack-snapshot
+      - ci
+      - system-test-reporter
+
     types: [completed]
 
 jobs:
