--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,8 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: 
+    workflows:
+      - bump-elastic-stack-snapshot
       - ci
       - system-test-reporter
       - update-beats
