--- a/.github/workflows/bump-elastic-stack.yml
+++ b/.github/workflows/bump-elastic-stack.yml
@@ -24,9 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [filter]
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
 
       - name: Setup Git
         uses: elastic/apm-pipeline-library/.github/actions/setup-git@current
@@ -39,4 +42,3 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           BRANCH: ${{ matrix.branch }}
         run: updatecli apply --config ./.ci/bump-elastic-stack-snapshot.yml
-
