update only the required files

--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -4,9 +4,7 @@ on:
   workflow_run:
     workflows:
       - bump-elastic-stack-snapshot
-      - ci
-      - system-test-reporter
-      - update-beats
+      - macos
     types: [completed]
 
 jobs:
