--- a/.ci/bump-elastic-stack-snapshot.yml
+++ b/.ci/bump-elastic-stack-snapshot.yml
@@ -7,6 +7,7 @@ actions:
     kind: github/pullrequest
     spec:
       labels:
+        - automation
         - dependencies
         - backport-skip
     scmid: default
