updatecli: use automation label
required for mergify, so it can merge automatically

--- a/.ci/bump-elastic-stack-snapshot.yml
+++ b/.ci/bump-elastic-stack-snapshot.yml
@@ -7,8 +7,9 @@ actions:
     kind: github/pullrequest
     spec:
       labels:
-        - dependencies
+        - automation
         - backport-skip
+        - dependencies
     scmid: default
 
 scms:
