automate: golang bump

--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -4,6 +4,7 @@ on:
   workflow_run:
     workflows:
       - bump-elastic-stack-snapshot
+      - bump-golang
       - ci
       - system-test-reporter
       - update-beats
