--- a/.github/workflows/update-beats.yml
+++ b/.github/workflows/update-beats.yml
@@ -23,6 +23,7 @@ jobs:
       - filter
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
