--- a/.github/workflows/update-beats.yml
+++ b/.github/workflows/update-beats.yml
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           BRANCH_NAME: ${{ github.ref_name }}
         run: updatecli apply --config ./.ci/update-beats.yml
-      - if: always()
+      - if: failure()
         uses: elastic/apm-pipeline-library/.github/actions/notify-build-status@current
         with:
           vaultUrl: ${{ secrets.VAULT_ADDR }}
