Fix service destination labels regression
Fix regression caused by #10056

--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/fields/fields.yml
@@ -33,3 +33,8 @@
   type: long
   description: Aggregated duration of outgoing requests, in microseconds.
   unit: micros
+- name: numeric_labels
+  type: object
+  dynamic: true
+  description: |
+    Custom key/value pairs. Can be used to add meta information to events. Should not contain nested objects. All values are stored as scaled_float.
