--- a/.github/workflows/update-beats.yml
+++ b/.github/workflows/update-beats.yml
@@ -31,7 +31,7 @@ jobs:
           go-version-file: go.mod
       - uses: elastic/apm-pipeline-library/.github/actions/updatecli@current
         env:
-          BRANCH_NAME: ${{ github.ref_name }}
+          BRANCH_NAME: ${{ matrix.branch }}
         with:
           vaultUrl: ${{ secrets.VAULT_ADDR }}
           vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
