--- a/.github/workflows/update-beats.yml
+++ b/.github/workflows/update-beats.yml
@@ -1,20 +1,30 @@
 name: update-beats
 
 on:
-  push:
-    branches:
-      - main
-      - "7.17"
-      - "8.*"
-      - '!8.[0-5]'
+  workflow_dispatch:
+  schedule:
+    - cron: '0 15 * * 1-5'
 
 permissions:
   contents: read
 
 
 jobs:
-  bump:
+  filter:
     runs-on: ubuntu-latest
+    timeout-minutes: 1
+    outputs:
+      matrix: ${{ steps.generator.outputs.matrix }}
+    steps:
+      - id: generator
+        uses: elastic/apm-pipeline-library/.github/actions/elastic-stack-snapshot-branches@current
+  bump:
+    needs:
+      - filter
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -22,7 +32,7 @@ jobs:
           go-version-file: go.mod
       - uses: elastic/apm-pipeline-library/.github/actions/updatecli@current
         env:
-          BRANCH_NAME: ${{ github.ref_name }}
+          BRANCH_NAME: ${{ matrix.branch }}
         with:
           vaultUrl: ${{ secrets.VAULT_ADDR }}
           vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
