Fix service destination labels regression (#10297)
Fix regression introduced by #10056 where service destination labels are not stored successfully.

(cherry picked from commit 0584e37ac8cf833f7f9599249f7fb60fd5a48b11)

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -57,6 +57,9 @@
     - description: Remove policy input var `service_metrics_enabled`
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/10109
+    - description: Add `event.{labels,numeric_labels}` to service destination metrics
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10297
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
