chore: add flush_bytes and flush_intervals to output.elasticsearch

--- a/apm-server.yml
+++ b/apm-server.yml
@@ -342,6 +342,14 @@ output.elasticsearch:
   # Configure http request timeout before failing an request to Elasticsearch.
   #timeout: 90
 
+  # The bulk request size threshold, in bytes, before flushing to {es}.
+  # The value must have a suffix, e.g. `"1MB"`. The default is `5MB`.
+  #flush_bytes: 5MB
+
+  # The maximum duration to accumulate events for a bulk request before being flushed to {es}.
+  # The value must have a duration suffix, e.g. `"5s"`. The default is `1s`.
+  #flush_interval: 1s
+
   # Enable custom SSL settings. Set to false to ignore custom SSL settings for secure communication.
   #ssl.enabled: true
 
