--- a/.mergify.yml
+++ b/.mergify.yml
@@ -28,7 +28,7 @@ pull_request_rules:
           - "{{ author }}"
         branches:
           - "8.4"
-        title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})" 
+        title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})"
   - name: backport patches to 8.3 branch
     conditions:
       - merged
@@ -40,7 +40,7 @@ pull_request_rules:
           - "{{ author }}"
         branches:
           - "8.3"
-        title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})"          
+        title: "[{{ destination_branch }}] {{ title }} (backport #{{ number }})"
   - name: backport patches to 8.2 branch
     conditions:
       - merged
@@ -161,7 +161,7 @@ pull_request_rules:
     conditions:
       - check-success=apm-ci/pr-merge
       - label=automation
-      - head~=^update-beats
+      - head~=^updatecli.*
       - files~=^(go.mod|go.sum|NOTICE.txt)
     actions:
       queue:
@@ -174,7 +174,7 @@ pull_request_rules:
         - closed
       - and:
         - label=automation
-        - head~=^update-beats
+        - head~=^updatecli.*
     actions:
       delete_head_branch:
   - name: notify the backport policy
