--- a/.ci/update-beats.yml
+++ b/.ci/update-beats.yml
@@ -16,7 +16,7 @@ scms:
 
 actions:
   default:
-    title: '[updatecli] Updater to elastic/beats@{{ source "beats" }}'
+    title: '[updatecli] Update to elastic/beats@{{ source "beats" }}'
     kind: github/pullrequest
     scmid: default
     spec:
@@ -24,6 +24,12 @@ actions:
       labels:
         - automation
         - backport-skip
+      description: |-
+        ### What
+        `elastic/beats` automatic sync
+
+        *Changeset*
+        * https://github.com/elastic/beats/commit/{{ source "beats" }}
 
 sources:
   beats:
