updatecli: set branch where PRs are created from, update PR title and description (#10384)

--- a/.ci/bump-elastic-stack-snapshot.yml
+++ b/.ci/bump-elastic-stack-snapshot.yml
@@ -1,17 +1,20 @@
 ---
 name: Bump elastic-stack to latest snapshot version
-pipelineid: 'bump-elastic-stack-snapshot-{{ requiredEnv "BRANCH" }}'
+pipelineid: 'updatecli-bump-elastic-stack-snapshot-{{ requiredEnv "BRANCH" }}'
 
 actions:
   default:
     title: '[updatecli] Bump elastic stack version to {{ source "latestVersion" }}'
     kind: github/pullrequest
+    scmid: default
     spec:
       labels:
         - automation
         - backport-skip
         - dependencies
-    scmid: default
+      description: |-
+        ### What
+        Bump elastic stack version to {{ source "latestVersion" }}
 
 scms:
   default:
