--- a/.ci/update-beats.yml
+++ b/.ci/update-beats.yml
@@ -1,6 +1,6 @@
 ---
 name: Bump beats
-pipelineid: 'update-beats-{{ requiredEnv "BRANCH_NAME" }}'
+pipelineid: 'updatecli-update-beats-{{ requiredEnv "BRANCH_NAME" }}'
 
 scms:
   default:
@@ -16,6 +16,7 @@ scms:
 
 actions:
   default:
+    title: '[updatecli] Update to elastic/beats@{{ source "beats" }}'
     kind: github/pullrequest
     scmid: default
     spec:
@@ -23,6 +24,12 @@ actions:
       labels:
         - automation
         - backport-skip
+      description: |-
+        ### What
+        `elastic/beats` automatic sync
+
+        *Changeset*
+        * https://github.com/elastic/beats/commit/{{ source "beats" }}
 
 sources:
   beats:
@@ -30,7 +37,6 @@ sources:
     spec:
       file: 'https://api.github.com/repos/elastic/beats/commits?sha={{ requiredEnv "BRANCH_NAME" }}&per_page=1'
       key: '.[0].sha'
-
 
 targets:
   beats:
@@ -44,5 +50,3 @@ targets:
         - name: PATH
         - name: GOPATH
         - name: HOME
-
-
