--- a/testing/apmsoak/terraform.tfvars.example
+++ b/testing/apmsoak/terraform.tfvars.example
@@ -14,8 +14,11 @@ gcp_zone = "us-west2-b"
 # APM Server URL to send events to
 # apm_server_url = "http://127.0.0.1:8200"
 
-# APM Server URL to send events to
+# Secret token for auth against the given server URL
 # apm_secret_token = "<secret_token>"
+
+# API Key for auth against the given server URL
+# apm_api_key = "<api_key>"
 
 # Max rate at which events will be sent to the APM server
 # Defaults to `4000eps` (i.e. 4000 events per second)
